# EarthSciSerialization

./: .gitignore  AGENTS.md  ATMOSPHERIC_CHEMISTRY_VERIFICATION_REPORT.md  CLAUDE.local.md  CLAUDE.md  COMPREHENSIVE_TEST_ANALYSIS.md  CONFORMANCE_SPEC.md  CONFORMANCE_TESTING.md  CONFORMANCE_TESTING_GUIDE.md  CONTRIBUTING.md  DOLT_REMOTE.md  ESM_COMPLIANCE_VALIDATION_MATRIX.md  Manifest.toml  Project.toml  README.md  SECURITY.md  TEST_COVERAGE_MATRIX.md  docker-compose.yml  end_to_end_verification.py  esm-libraries-spec.md  esm-schema.json  esm-spec.md  manifest  test_core_functionality.py  test_ic_direct.py  test_ic_standalone.py  test_initial_conditions_simple.py  test_unit_validation_fix.py  workspace.json
.beads/: .gitignore  config.yaml  issues.jsonl  metadata.json
.runtime/: last_handoff_ts  session_id
audits/: maintainability_audit_2026-05-01.md
docker/: Dockerfile.julia  Dockerfile.python  Dockerfile.rust  Dockerfile.typescript
docs/: CONTAINERS.md  Gemfile  README.md  RELEASE_PIPELINE.md  RELEASE_PROCESS.md  STRUCTURAL_ERROR_TEST_FIXTURES.md  _config.yml  hugo.toml  index.md  units-standard.md
examples/: initial_conditions_demo.py
lib/: interp.esm
monitoring/: README.md  __init__.py  package_analytics.py  pyproject.toml  python_integration.py
scripts/: README.md  _grid_adapter_stub.py  build-binaries.sh  build-container-images.sh  compare-conformance-outputs.py  container-registry-manager.sh  demo-conformance.sh  dependency_resolver.py  docker-conformance-runner.sh  docs_maintenance.py  enhanced-conformance-analyzer.py  enhanced-report-generator.py  (+24 more)
(+774 files in other folders)
