[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "esm-monitoring"
version = "0.1.0"
description = "Analytics and performance monitoring companion for EarthSciSerialization bindings"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "EarthSciML Authors and Contributors"}
]

dependencies = [
    "psutil>=5.9",
]

[project.optional-dependencies]
dashboard = [
    "flask>=2.0",
]

[tool.setuptools]
packages = ["monitoring"]
package-dir = {"monitoring" = "."}
